--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ div{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 80x;
+    padding: 200px;
     border-radius: 15px;
     color: white;
 }
